# oyster

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  Makefile  README.md  go.mod  go.sum  index.html  rustfmt.toml
.github/: dependabot.yaml
.github/workflows/: ci.yaml  docs.yaml
_/css/: main.css
github.com/: index.html
github.com/johnlettman/: index.html
metadata/: beam-intrinsics.go  calibration-status.go  calibration-status_test.go  calibration.go  calibration_test.go  config-params.go  imu-data-format.go  imu-intrinsics.go  lidar-data-format.go  lidar-data-format_test.go  lidar-intrinsics.go  sensor-info.go
oysterctl/: Cargo.toml
packet/: imu-packet.go  packet.go
packet/channel/: entries.go  entries_test.go  profile.go
packet/column/: block.go  block_test.go  entries.go  entries_test.go  profile.go
packet/decode/: packet.go
packet/profile/: imu-profile.go  imu-profile_test.go  lidar-profile.go
scripts/: format_buffer_for_go
src/: build.rs  lib.rs
src/client/: client.rs  mod.rs  pcap_misc.rs  pcap_packet.rs  pcap_save.rs
src/metadata/: beam_intrinsics.rs  calibration_status.rs  config_params.rs  error.rs  imu_data_format.rs  imu_intrinsics.rs  legacy_metadata.rs  lidar_data_format.rs  lidar_intrinsics.rs  metadata.rs  mod.rs  sensor_info.rs
src/packet/: mod.rs  packing.rs
src/ros/: lidar_message.rs  mod.rs
src/scan/: mod.rs  xyzlut.rs
src/types/: azimuth_window.rs  baud_rate.rs  column_window.rs  full_scale_range.rs  lidar_mode.rs  mod.rs  multipurpose_io_mode.rs  nmea_baud_rate.rs  operating_mode.rs  polarity.rs  return_order.rs  shot_limiting_status.rs  thermal_shutdown_status.rs  timestamp_mode.rs
src/util/: mod.rs  string_or_struct.rs
tests/: test_packet_lidar_column_header.rs  test_types_auto_start_flag.rs  test_types_return_order.rs  test_types_shot_limiting_status.rs
types/: auto-start-flag.go  auto-start-flag_test.go  azimuth-window.go  azimuth-window_test.go  column-window.go  column-window_test.go  full-scale-range.go  full-scale-range_test.go  lidar-mode.go  lidar-mode_test.go  multipurpose-io-mode.go  multipurpose-io-mode_test.go  nmea-baud-rate.go  nmea-baud-rate_test.go  operating-mode.go  operating-mode_test.go  polarity.go  polarity_test.go  return-order.go  return-order_test.go  shot-limiting-status.go  shot-limiting-status_test.go  thermal-shutdown-status.go  thermal-shutdown-status_test.go  time-source.go  time-source_test.go
types/pseudo/: int-bool-json.go  int-bool-json_test.go  int-bool.go  int-bool_test.go  list-tuple-json.go  list-tuple-json_test.go  (+4 more)
util/: logger.go  maps.go  maps_test.go  math.go  math_test.go  paths.go  paths_test.go  strings.go  strings_test.go  tuples.go  tuples_test.go
(+36 files in other folders)
