[package]
name = "oyster"
version = "0.1.0"
license-file = "LICENSE"
edition = "2021"
repository = "https://github.com/johnlettman/oyster"
keywords = ["oyster", "ouster", "lidar"]

[lib]
name = "oyster"
crate-type = ["cdylib", "rlib"]

[dependencies]
phf = {  version = "0.11.2", default-features = false }
phf_codegen = "0.11.1"
serde = { version = "1.0.210", features = ["derive"] }
log = "0.4.22"
serde_json = "1.0.128"
nalgebra = {  version = "0.33.0", features = ["serde", "serde-serialize"] }
chrono = { version = "0.4.38", features = ["serde"] }
serde_with = {version = "3.9.0", features = ["macros"] }
binrw = { version = "0.14.0" }
modular-bitfield = { version = "0.11.2" }
once_cell = "1.20.1"
enum-map = "2.7.3"
pyo3 = "0.22.3"
rosbag = "0.6.3"
syn = "2.0.79"
quote = "1.0.37"
void = "1.0.2"
const_format = "0.2"
git-version = "0.3.9"
tokio = {  version = "1", features = ["full"] }
pcap = { version = "2", features = ["gat-std"] }
pnet = "0.35.0"
libc = "0.2.159"
derive-new = "0.7"
num-derive = "0.4"
num-traits = "0.2"
test-log = "0.2"

[dev-dependencies]
fake = "2.10.0"

[features]
default = ["pyo3"]
pyo3 = []

full = [
    "pyo3"
]

[workspace]
members = ["oysterctl"]

[workspace.lints.rustdoc]
broken_intra_doc_links = "warn"
bare_urls = "warn"

[lints]
workspace = true
